--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+!/build/ConsultadeRegistrosTECHO_APPVersions/
 
-build/ConsultadeRegistrosTECHO_APPVersions
 
 # Symbolication related
 app.*.symbols
